# system_note

./: README.md  SIL.md  coredump.md  other.md
CMake/: 0.cmake_tutorial.md  1. cmake_introduction.md  2.cmake_install.md  3. CmakeLists.txt_baseRule.md  3.1.target_include_directories_example.md  3.2.find_package_example.md  3.3.option_and_set_command.md  4. cmake_command.md
CMake/CMake_Sample/: CMakeLists.txt  main.cpp  testFunc.cpp  testFunc.hpp  testFunc1.cpp  testFunc1.hpp
GIT/: .gitignore.md  git 基本命令.md  git 基础概念.md  git 将本地文件推送到远程仓库.md
J6E_arch/: J6E 新软件架构搭建记录.md  XMT2.md  build_and_run.md  diff_configure_J6E_or_ubuntu.md  get_system_timer.md  imo_ci.md  swarch_config.md  units.md  vehicle_test.md  新架构一般工作流程.md
Linux/: linux常用指令.md  network.md
ROS2/: ROS2 humble安装与基本用法.md  功能包(packages).md  节点Node.md  通信机制.md
VPN/: vpn.md
conda/: conda 基本安装及使用.md
docker/: docker安装与基本使用.md
environment/: IDC_22.04.md
iPark/: 控制段何时收到下一段轨迹.md
li_auto_arm/: 基本work_flow.md  部署arm环境docker问题记录.md
